@@ -5,6 +5,7 @@ import os, sys, re
 import gc
 
 stests = [
+    r'$a+b+\dots+\dot{s}+\ldots$',
     r'$x \doteq y$',
     r'\$100.00 $\alpha \_$',
     r'$\frac{\$100.00}{y}$',
